@@ -1,4 +1,5 @@
 5.4.0 -> 5.4.1:
+    - jbj: rpmal: stub-in the rpmfiFNBF() replacement.
 
 5.3.7 -> 5.4.0:
     - jbj: remove markReplacedFiles.
